# contaminante

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
contaminante/: __init__.py  contaminante.py  gaia.py  utils.py  version.py
contaminante.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contaminante/tests/: test_contaminante.py
docs/: Makefile  README.md  api.rst  conf.py  how-does-it-work.md  index.html  index.rst  tutorial.ipynb
docs/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
docs/_build/doctrees/: README.doctree  api.doctree  how-does-it-work.doctree  index.doctree  tutorial.doctree
docs/_build/doctrees/.ipynb_checkpoints/: tutorial-checkpoint.doctree
docs/_build/html/: .buildinfo  README.html  api.html  genindex.html  how-does-it-work.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/_build/html/.ipynb_checkpoints/: tutorial-checkpoint.html
docs/_build/html/_sources/: README.md.txt  api.rst.txt  index.rst.txt  tutorial.ipynb.txt
docs/_build/html/_sources/.ipynb_checkpoints/: tutorial-checkpoint.ipynb.txt
docs/_build/html/_static/: documentation_options.js
docs/doctrees/: README.doctree  api.doctree  index.doctree  tutorial.doctree
src/contaminante/: contaminante.py  gaia.py  version.py
tests/: test_contaminante.py
tests/data/: test.fits
tutorials/: Colaboratory-Notebook.ipynb  tutorial-1_how-to-use-contaminante.ipynb
