[tool.poetry]
name = "contaminante"
version = "0.5.6"
description = "A package to help find the contaminant transiting source in NASA's *Kepler*, *K2* or *TESS* data."
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.3"
astropy = "^4.3.1"
scipy = "^1.7.1"
tqdm = "^4.62.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
lightkurve = "^2.0.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.2.1"
vetting = "^0.1.9"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
